Improve projects  pages

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -13,7 +13,7 @@
                             <h5 class="mb-0">
                                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
                                     aria-expanded="true" aria-controls="collapseOne">
-                                    AI and web developer projects
+                                    AI and Web Development Initiatives
                                 </button>
                             </h5>
                         </div>
@@ -21,9 +21,8 @@
                         <div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
                             data-parent="#accordion">
                             <div class="card-body">
-                                As part of the learning experience at Centennial College, I develop these projects. However the AI project is focus on 
-                                what is the next to be useful to the community.
-
+                                "As part of my learning experience at Centennial College, I developed these projects.
+                                However, the AI project is particularly focused on what can be next to benefit the community."
                             </div>
                             <div class="row align-items-stretch">
                                 <!-- AI Project -->
@@ -87,15 +86,15 @@
                             <h5 class="mb-0">
                                 <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
                                     aria-expanded="false" aria-controls="collapseTwo">
-                                    Change of direction to technology
+                                    Pivoting to Technology
                                 </button>
                             </h5>
                         </div>
                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                             <div class="card-body">
-                                Due to the pandemic, I had to create a tool to help our customer to keep distance between mechanicalls and operators.
-                                The app born to control the wear of the ground enganing tools, during the pre operational inspecction task by operators.
-                                This applicacion was won digital transformation award on Cerro Verde Mine.
+                                "Due to the pandemic, I was compelled to create a tool to help our customers maintain distance
+                                between mechanics and operators. The app was developed to monitor the wear of ground-engaging tools
+                                during pre-operational inspections by operators. This application won the Digital Transformation Award at Cerro Verde Mine."
                             </div>
                             <div class="row align-items-stretch">
                                 <!-- Kiruwear App -->
@@ -141,14 +140,14 @@
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
                                 aria-expanded="false" aria-controls="collapseThree">
-                                Mining proyectos focus on wear abrasion solutions 
+                                Innovations in Mining: Wear Abrasion Solutions
                             </button>
                         </h5>
                     </div>
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                         <div class="card-body">
-                            During the eighteen years of working as a thecnical global supporter in speaking spanish latin america region.
-                            I had been working on several projects, the most important of which where as follows:
+                            "Over the course of eighteen years working as a technical global supporter for the Spanish-speaking
+                            Latin America region, I have been involved in numerous projects. Among the most significant are the following:"
                         </div>
                         <div class="row align-items-stretch">
                             <div class="row">
