--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -97,12 +97,12 @@
                                 during pre-operational inspections by operators. This application won the Digital Transformation Award at Cerro Verde Mine."
                             </div>
                             <div class="row align-items-stretch">
+                                <div class="row">
                                 <!-- Kiruwear App -->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
-                                        <div class="card-img-container">
                                             <img src="../assets/images/kiru.png" alt="Kiruwear App"
-                                                class="card-img-left">
+                                                class="card-img-top">
                                             <div class="card-body">
                                                 <h5>Kiruwear App (Mobile App)</h5>
                                                 <p>Remote wear control app to prevent unplanned downtime for P&H4100XPC
@@ -112,24 +112,26 @@
                                                 </p>
                                                 <p><strong>Role:</strong> Manager and Creator</p>
                                                 <p><strong>Languages:</strong> Flutter, PHP Codeigniter</p>
+                                                <p><strong>Status:</strong> Complete - <a
+                                                    href="https://kiru-wear.com/"
+                                                    target="_blank">Website</a></p>
                                             </div>
-                                        </div>
                                     </div>
+                                
                                 </div>
                                 <!-- Kiruwear award-->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
-                                        <div class="card-img-container">
                                             <img src="../assets/images/tech_award.jpg" alt="Kiruwear App Award"
-                                                class="card-img-right">
+                                                class="card-img-top">
                                             <div class="card-body">
                                                 <h5>2020 Technology Award</h5>
                                                 <p>For this innovation, I received a prestigious Global
                                                     Technology Award from the company I collaborated with.
                                                 </p>
                                             </div>
-                                        </div>
                                     </div>
+                                </div>
                                 </div>
                             </div>
                         </div>
