Improve projects  pages

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -13,7 +13,7 @@
                             <h5 class="mb-0">
                                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
                                     aria-expanded="true" aria-controls="collapseOne">
-                                    AI and Web Development Initiatives
+                                    <h4>AI and Web Development Initiatives</h4>
                                 </button>
                             </h5>
                         </div>
@@ -86,7 +86,7 @@
                             <h5 class="mb-0">
                                 <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
                                     aria-expanded="false" aria-controls="collapseTwo">
-                                    Pivoting to Technology
+                                    <h4>Pivoting to Technology</h4>
                                 </button>
                             </h5>
                         </div>
@@ -142,7 +142,7 @@
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
                                 aria-expanded="false" aria-controls="collapseThree">
-                                Innovations in Mining: Wear Abrasion Solutions
+                                <h4>Innovations in Mining: Wear Abrasion Solutions</h4>
                             </button>
                         </h5>
                     </div>
