Improve projects  pages

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,8 @@
 <%-include('partials/header.ejs')%>
 <%-include('partials/main_nav.ejs')%>
 
-<!-- Filename: link.ejs | Author: Juan Arevalo | Date: 22-08-2023 -->
+<!-- Filename: link.ejs | Author: Juan Arevalo | Date: 02-09-2023 -->
+<div class="d-flex justify-content-center bg-light">
 <main class="container mt-5">
     <h2 class="text-center mb-4">Important Links</h2>
     <div class="row justify-content-center">
@@ -95,6 +96,6 @@
     </div>
     <br>
 </main>
-
+</div>
 <%-include ('partials/bottom_nav.ejs')%>
 <%-include ('partials/footer.ejs')%>
