--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,6 +1,7 @@
 <%-include('partials/header.ejs')%>
 <%-include('partials/main_nav.ejs')%>
 <!-- Filename: services.ejs | Author: Juan Arevalo | Date: 22-08-2023 -->
+<div class="d-flex justify-content-center bg-light">
 <main class="container py-4">
     <div class="jumbotron text-between">
         <h1 class="display-7">Welcome to the <%=title%> page</h1>
@@ -58,5 +59,6 @@
         </section>
     </div>
 </main>
+</div>
 <%-include ('partials/bottom_nav.ejs')%>
 <%-include ('partials/footer.ejs')%>
