--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
         <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 02-09-2023 -->
-        <div class="d-flex justify-content-center bg-light vh-100">
+        <div class="d-flex justify-content-center bg-light">
             <main class="container py-5">
                 <div class="jumbotron bg-gradient-light text-center">
                     <h1 class="display-7">My Projects</h1>
@@ -209,6 +209,7 @@
                         </div>
                     </div>
                 </div>
+                <br>
                 <br>
                 <br>
                 <br>
