Improve projects  pages

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -2,7 +2,7 @@
 <%-include('partials/main_nav.ejs')%>
 
 <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 02-09-2023 -->
-<div class="d-flex justify-content-center bg-light">
+<div class="d-flex justify-content-center bg-light vh-100">
 <main class="container mt-5">
     <h2 class="text-center mb-4">Important Links</h2>
     <div class="row justify-content-center">
