--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
         <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 02-09-2023 -->
-        <div class="d-flex justify-content-center">
+        <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container py-4 float-sm-start">
                 <div class="jumbotron text-between">
                     <h1 class="display-7">Welcome to the <%=title%> page</h1>
