--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
         <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 02-09-2023 -->
-        <div class="d-flex justify-content-center bg-light h-100">
+        <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container py-5">
                 <div class="jumbotron bg-gradient-light text-center">
                     <h1 class="display-7">My Projects</h1>
@@ -22,7 +22,8 @@
                             data-parent="#accordion">
                             <div class="card-body">
                                 "As part of my learning experience at Centennial College, I developed these projects.
-                                However, the AI project is particularly focused on what can be next to benefit the community."
+                                However, the AI project is particularly focused on what can be next to benefit the
+                                community."
                             </div>
                             <div class="row align-items-stretch">
                                 <!-- AI Project -->
@@ -92,15 +93,18 @@
                         </div>
                         <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
                             <div class="card-body">
-                                "Due to the pandemic, I was compelled to create a tool to help our customers maintain distance
-                                between mechanics and operators. The app was developed to monitor the wear of ground-engaging tools
-                                during pre-operational inspections by operators. This application won the Digital Transformation Award at Cerro Verde Mine."
+                                "Due to the pandemic, I was compelled to create a tool to help our customers maintain
+                                distance
+                                between mechanics and operators. The app was developed to monitor the wear of
+                                ground-engaging tools
+                                during pre-operational inspections by operators. This application won the Digital
+                                Transformation Award at Cerro Verde Mine."
                             </div>
                             <div class="row align-items-stretch">
                                 <div class="row">
-                                <!-- Kiruwear App -->
-                                <div class="col-md-4 mb-4">
-                                    <div class="card shadow-sm h-100">
+                                    <!-- Kiruwear App -->
+                                    <div class="col-md-4 mb-4">
+                                        <div class="card shadow-sm h-100">
                                             <img src="../assets/images/kiru.png" alt="Kiruwear App"
                                                 class="card-img-top">
                                             <div class="card-body">
@@ -112,16 +116,15 @@
                                                 </p>
                                                 <p><strong>Role:</strong> Manager and Creator</p>
                                                 <p><strong>Languages:</strong> Flutter, PHP Codeigniter</p>
-                                                <p><strong>Status:</strong> Complete - <a
-                                                    href="https://kiru-wear.com/"
-                                                    target="_blank">Website</a></p>
+                                                <p><strong>Status:</strong> Complete - <a href="https://kiru-wear.com/"
+                                                        target="_blank">Website</a></p>
                                             </div>
+                                        </div>
+
                                     </div>
-                                
-                                </div>
-                                <!-- Kiruwear award-->
-                                <div class="col-md-4 mb-4">
-                                    <div class="card shadow-sm h-100">
+                                    <!-- Kiruwear award-->
+                                    <div class="col-md-4 mb-4">
+                                        <div class="card shadow-sm h-100">
                                             <img src="../assets/images/tech_award.jpg" alt="Kiruwear App Award"
                                                 class="card-img-top">
                                             <div class="card-body">
@@ -130,8 +133,8 @@
                                                     Technology Award from the company I collaborated with.
                                                 </p>
                                             </div>
+                                        </div>
                                     </div>
-                                </div>
                                 </div>
                             </div>
                         </div>
@@ -140,7 +143,7 @@
                 <div class="card">
                     <div class="card-header" id="headingThree">
                         <h5 class="mb-0">
-                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree"
+                            <button class="btn btn-link text-left collapsed" data-toggle="collapse" data-target="#collapseThree"
                                 aria-expanded="false" aria-controls="collapseThree">
                                 <h4>Innovations in Mining: Wear Abrasion Solutions</h4>
                             </button>
@@ -148,8 +151,10 @@
                     </div>
                     <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                         <div class="card-body">
-                            "Over the course of eighteen years working as a technical global supporter for the Spanish-speaking
-                            Latin America region, I have been involved in numerous projects. Among the most significant are the following:"
+                            "Over the course of eighteen years working as a technical global supporter for the
+                            Spanish-speaking
+                            Latin America region, I have been involved in numerous projects. Among the most significant
+                            are the following:"
                         </div>
                         <div class="row align-items-stretch">
                             <div class="row">
@@ -209,7 +214,6 @@
                         </div>
                     </div>
                 </div>
-                <br>
                 <br>
                 <br>
                 <br>
