--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -11,7 +11,7 @@
                     <div class="card">
                         <div class="card-header" id="headingOne">
                             <h5 class="mb-0">
-                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne"
+                                <button class="btn btn-link text-left " data-toggle="collapse" data-target="#collapseOne"
                                     aria-expanded="true" aria-controls="collapseOne">
                                     <h4>AI and Web Development Initiatives</h4>
                                 </button>
@@ -85,7 +85,7 @@
                     <div class="card">
                         <div class="card-header" id="headingTwo">
                             <h5 class="mb-0">
-                                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo"
+                                <button class="btn btn-link text-left collapsed" data-toggle="collapse" data-target="#collapseTwo"
                                     aria-expanded="false" aria-controls="collapseTwo">
                                     <h4>Pivoting to Technology</h4>
                                 </button>
