Add sistem analisyt to project  pages

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -114,7 +114,7 @@
                                                     This was awarded the 2021 Digital Transformation at Cerro Verde
                                                     Mine.
                                                 </p>
-                                                <p><strong>Role:</strong> Manager and Creator</p>
+                                                <p><strong>Role:</strong> Manager, creator and System Analist</p>
                                                 <p><strong>Languages:</strong> Flutter, PHP Codeigniter</p>
                                                 <p><strong>Status:</strong> Complete - <a href="https://kiru-wear.com/"
                                                         target="_blank">Website</a></p>
