Fix images on projects  pages

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -31,7 +31,7 @@
                                     <div class="col-md-4 mb-4">
                                         <div class="card shadow-sm h-100">
                                             <img src="../assets/images/fatalities_TO.png" alt="Fatal Traffic Collisions"
-                                                class="card-img-top">
+                                                class="card-img-top img-fluid">
                                             <div class="card-body">
                                                 <h5>AI project</h5>
                                                 <p>Develop a probalistic application to predict accidents in Toronto,
@@ -46,7 +46,7 @@
                                     <div class="col-md-4 mb-4">
                                         <div class="card shadow-sm h-100">
                                             <img src="../assets/images/tournament_web.png"
-                                                alt="Fatal Traffic Collisions" class="card-img-top">
+                                                alt="Fatal Traffic Collisions" class="card-img-top img-fluid">
                                             <div class="card-body">
                                                 <h5>Tournament Creation by Time Travellers Team</h5>
                                                 <p>The Application is about tournament management, part of a group
@@ -65,7 +65,7 @@
                                     <div class="col-md-4 mb-4">
                                         <div class="card shadow-sm h-100">
                                             <img src="../assets/images/perso.png" alt="Personal Portfolio Web App"
-                                                class="card-img-top">
+                                                class="card-img-top img-fluid">
                                             <div class="card-body">
                                                 <h5>Personal Portfolio (Web App)</h5>
                                                 <p>Minimalistic personal portfolio.</p>
@@ -106,7 +106,7 @@
                                     <div class="col-md-4 mb-4">
                                         <div class="card shadow-sm h-100">
                                             <img src="../assets/images/kiru.png" alt="Kiruwear App"
-                                                class="card-img-top">
+                                                class="card-img-top img-fluid">
                                             <div class="card-body">
                                                 <h5>Kiruwear App (Mobile App)</h5>
                                                 <p>Remote wear control app to prevent unplanned downtime for P&H4100XPC
@@ -114,7 +114,7 @@
                                                     This was awarded the 2021 Digital Transformation at Cerro Verde
                                                     Mine.
                                                 </p>
-                                                <p><strong>Role:</strong> Manager, creator and System Analist</p>
+                                                <p><strong>Role:</strong> Creator, Manager, and System Analist</p>
                                                 <p><strong>Languages:</strong> Flutter, PHP Codeigniter</p>
                                                 <p><strong>Status:</strong> Complete - <a href="https://kiru-wear.com/"
                                                         target="_blank">Website</a></p>
@@ -126,12 +126,25 @@
                                     <div class="col-md-4 mb-4">
                                         <div class="card shadow-sm h-100">
                                             <img src="../assets/images/tech_award.jpg" alt="Kiruwear App Award"
-                                                class="card-img-top">
+                                                class="card-img-top img-fluid">
                                             <div class="card-body">
                                                 <h5>2020 Technology Award</h5>
                                                 <p>For this innovation, I received a prestigious Global
                                                     Technology Award from the company I collaborated with.
                                                 </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <!-- Former company recognition-->
+                                    <div class="col-md-4 mb-4">
+                                        <div class="card shadow-sm h-100">
+                                            <img src="../assets/images/recognition.png" alt="Recognition by former company"
+                                                class="card-img-top img-fluid">
+                                            <div class="card-body">
+                                                <p><strong>Objectives</strong> </p>
+                                                <p>. Reduce social distancing during the inspection of the GET</p>
+                                                <p>. Help the customer be more efficient in monitoring the wear of the GETs</p>
+                                                <p>. Learn about the wear of the GETs online through the website https://kiru-wear.com/</p>
                                             </div>
                                         </div>
                                     </div>
@@ -162,7 +175,7 @@
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
                                         <img src="../assets/images/dragline.png" alt="Dragline bucket"
-                                            class="card-img-top">
+                                            class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h5>Assembly Dragline Bucket</h5>
                                             <p>Assembled 115CY Profill Bucket in 20 days.</p>
@@ -175,7 +188,7 @@
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
                                         <img src="../assets/images/bucket_panama.png" alt="Aquadigger bucket Dredge"
-                                            class="card-img-top">
+                                            class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h5>Rebuild for Manufacturer Warranty</h5>
                                             <p>03 Aquadigger Hoe Bucket rebuilt for Aleman Zubieta Dredge - Dredging
@@ -191,7 +204,7 @@
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
                                         <img src="../assets/images/ant_cable.png" alt="Cable shovel photo"
-                                            class="card-img-top">
+                                            class="card-img-top img-fluid">
                                         <div class="card-body">
                                             <h5>Six Sigma Project</h5>
                                             <p>Decreased cable shovel downtime from GET issues from 30 hours to 5
