--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,105 +1,175 @@
 <%-include('partials/header.ejs')%>
-<%-include('partials/main_nav.ejs')%>
+    <%-include('partials/main_nav.ejs')%>
 
-<!-- Filename: link.ejs | Author: Juan Arevalo | Date: 02-09-2023 -->
-<div class="d-flex justify-content-center bg-light vh-100">
-<main class="container mt-5">
-    <h2 class="text-center mb-4">Important Links</h2>
-    <div class="row justify-content-center">
-        
-        <div class="col-md-4 mb-3">
-            <div class="card text-center">
-                <i class="fa fa-university card-img mt-3" style="font-size: 3.5em; color: #000000;"></i>
-                <div class="card-body">
-                    <h5 class="card-title">Centennial College</h5>
-                    <a href="https://www.centennialcollege.ca/" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
-                </div>
-            </div>
-        </div>
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 09-09-2023 -->
+        <div class="d-flex justify-content-center bg-light vh-100">
+            <main class="container mt-5">
+                <h2 class="text-center mb-4">Important Links</h2>
 
-        <div class="col-md-4 mb-3">
-            <div class="card text-center">
-                <i class="fa fa-database card-img mt-3" style="font-size: 3.5em; color: #000;"></i>
-                <div class="card-body">
-                    <h5 class="card-title">Kaggle</h5>
-                    <a href="https://www.kaggle.com" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
-                </div>
-            </div>
-        </div>
+                <div class="container mt-5">
 
-        <div class="col-md-4 mb-3">
-            <div class="card text-center">
-                <i class="fa fa-code card-img mt-3" style="font-size: 3.5em; color: #000;"></i>
-                <div class="card-body">
-                    <h5 class="card-title">Visualize Code</h5>
-                    <a href="https://pythontutor.com/visualize.html#mode=edit" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
-                </div>
-            </div>
-        </div>
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs" id="linkTabs" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link active" id="category1-tab" data-toggle="tab" href="#category1" role="tab"
+                                aria-controls="category1" aria-selected="true">Learning Center</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="category2-tab" data-toggle="tab" href="#category2" role="tab"
+                                aria-controls="category2" aria-selected="false">Tools</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="category3-tab" data-toggle="tab" href="#category3" role="tab"
+                                aria-controls="category3" aria-selected="false">Supervised Learning</a>
+                        </li>
+                        <!-- ... more tabs for more categories ... -->
+                    </ul>
 
-        <div class="col-md-4 mb-3">
-            <div class="card text-center">
-                <i class="fa fa-file-alt card-img mt-3" style="font-size: 3.5em; color: #000;"></i>
-                <div class="card-body">
-                    <h5 class="card-title">Readme.so</h5>
-                    <a href="https://readme.so/editor" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
-                </div>
-            </div>
-        </div>
+                    <!-- Tab content -->
+                    <div class="tab-content mt-3" id="linkTabContent">
+                        <div class="tab-pane fade show active" id="category1" role="tabpanel"
+                            aria-labelledby="category1-tab">
+                            <div class="row justify-content-center">
 
-        <div class="col-md-4 mb-3">
-            <div class="card text-center">
-                <i class="fa fa-book card-img mt-3" style="font-size: 3.5em; color: #000;"></i>
-                <div class="card-body">
-                    <h5 class="card-title">API Documentation</h5>
-                    <a href="https://devdocs.io" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
-                </div>
-            </div>
-        </div>
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa fa-university card-img mt-3"
+                                            style="font-size: 3.5em; color: #000000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Centennial College</h5>
+                                            <a href="https://www.centennialcollege.ca/" class="btn btn-light"
+                                                target="_blank" rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
 
-        <div class="col-md-4 mb-3">
-            <div class="card text-center">
-                <i class="fa fa-project-diagram card-img mt-3" style="font-size: 3.5em; color: #000;"></i>
-                <div class="card-body">
-                    <h5 class="card-title">PlantUML</h5>
-                    <a href="https://www.plantuml.com/plantuml/uml/SyfFKj2rKt3CoKnELR1Io4ZDoSa70000" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa fa-database card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Kaggle</h5>
+                                            <a href="https://www.kaggle.com" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa fa-book card-img mt-3" style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">API Documentation</h5>
+                                            <a href="https://devdocs.io" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                            <!-- ... more links for this category ... -->
+                        </div>
+
+
+                        <div class="tab-pane fade" id="category2" role="tabpanel" aria-labelledby="category2-tab">
+                            <div class="row justify-content-center">
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa fa-code card-img mt-3" style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Visualize Code</h5>
+                                            <a href="https://pythontutor.com/visualize.html#mode=edit"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa fa-file-alt card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Readme.so</h5>
+                                            <a href="https://readme.so/editor" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa fa-project-diagram card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">PlantUML</h5>
+                                            <a href="https://www.plantuml.com/plantuml/uml/SyfFKj2rKt3CoKnELR1Io4ZDoSa70000"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- ... more links for this category ... -->
+                            </div>
+                        </div>
+                        <!-- ... more content panels for more categories ... -->
+                        <div class="tab-pane fade" id="category3" role="tabpanel" aria-labelledby="category3-tab">
+                            <div class="row justify-content-center">
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fas fa-table card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Pandas</h5>
+                                            <a href="https://pandas.pydata.org/pandas-docs/stable/user_guide/visualization.html"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fas fa-robot card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Scikit-learn</h5>
+                                            <a href="https://scikit-learn.org/stable/" class="btn btn-light"
+                                                target="_blank" rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fas fa-chart-line card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Seaborn</h5>
+                                            <a href="https://seaborn.pydata.org" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- ... more links for this category ... -->
+                            </div>
+
+                            <!-- ... more links for this category ... -->
+                        </div>
+                    </div>
+
                 </div>
-            </div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+            </main>
         </div>
-        <div class="col-md-4 mb-3">
-            <div class="card text-center">
-                <i class="fas fa-chart-line card-img mt-3" style="font-size: 3.5em; color: #000;"></i>
-                <div class="card-body">
-                    <h5 class="card-title">Seaborn</h5>
-                    <a href="https://seaborn.pydata.org" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 mb-3">
-            <div class="card text-center">
-                <i class="fas fa-robot card-img mt-3" style="font-size: 3.5em; color: #000;"></i>
-                <div class="card-body">
-                    <h5 class="card-title">Scikit-learn</h5>
-                    <a href="https://scikit-learn.org/stable/" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 mb-3">
-            <div class="card text-center">
-                <i class="fas fa-table card-img mt-3" style="font-size: 3.5em; color: #000;"></i>
-                <div class="card-body">
-                    <h5 class="card-title">Pandas</h5>
-                    <a href="https://pandas.pydata.org/pandas-docs/stable/user_guide/visualization.html" class="btn btn-light" target="_blank" rel="noopener noreferrer">Visit</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-</main>
-</div>
-<%-include ('partials/bottom_nav.ejs')%>
-<%-include ('partials/footer.ejs')%>
+        <%-include ('partials/bottom_nav.ejs')%>
+        <%-include ('partials/footer.ejs')%>
