Add effect on link  pages

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 09-09-2023 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 10-09-2023 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -20,7 +20,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="category3-tab" data-toggle="tab" href="#category3" role="tab"
-                                aria-controls="category3" aria-selected="false">Supervised Learning</a>
+                                aria-controls="category3" aria-selected="false">Machine Learning</a>
                         </li>
                         <!-- ... more tabs for more categories ... -->
                     </ul>
@@ -61,6 +61,17 @@
                                         <div class="card-body">
                                             <h5 class="card-title">API Documentation</h5>
                                             <a href="https://devdocs.io" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa fa-book-bookmark card-img mt-3" style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Books-O Reilly</h5>
+                                            <a href="https://learning.oreilly.com/home/" class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
                                         </div>
                                     </div>
@@ -151,6 +162,54 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Seaborn</h5>
                                             <a href="https://seaborn.pydata.org" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fas fa-file-code card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Ageron Git hub</h5>
+                                            <a href="https://github.com/ageron/handson-ml2" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fas fa-laptop-code card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Deep Learning</h5>
+                                            <a href="https://www.deeplearningbook.org" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fas fa-folder-open card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Deep Learning Tutorial</h5>
+                                            <a href="http://deeplearning.stanford.edu/tutorial/" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fas fa-snowflake card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Neural Network</h5>
+                                            <a href="http://neuralnetworksanddeeplearning.com/chap1.html/" class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
                                         </div>
                                     </div>
