--- a/views/link.ejs
+++ b/views/link.ejs
@@ -123,6 +123,32 @@
                                     </div>
                                 </div>
 
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa fa-font-awesome card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Icon Awesome</h5>
+                                            <a href="https://fontawesome.com/icons"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-bootstrap card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Bootstrap</h5>
+                                            <a href="https://getbootstrap.com/"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
                                 <!-- ... more links for this category ... -->
                             </div>
                         </div>
