--- a/views/link.ejs
+++ b/views/link.ejs
@@ -22,6 +22,10 @@
                             <a class="nav-link" id="category3-tab" data-toggle="tab" href="#category3" role="tab"
                                 aria-controls="category3" aria-selected="false">Machine Learning</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" id="category4-tab" data-toggle="tab" href="#category4" role="tab"
+                                aria-controls="category4" aria-selected="false">Big Data</a>
+                        </li>
                         <!-- ... more tabs for more categories ... -->
                     </ul>
 
@@ -243,11 +247,51 @@
 
                                 <!-- ... more links for this category ... -->
                             </div>
-
                             <!-- ... more links for this category ... -->
                         </div>
-                    </div>
+                        <div class="tab-pane fade" id="category4" role="tabpanel" aria-labelledby="category4-tab">
+                            <div class="row justify-content-center">
 
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-microsoft card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Microsoft Azure</h5>
+                                            <a href="https://azure.microsoft.com/en-ca/" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-store card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Hadoop</h5>
+                                            <a href="https://hadoop.apache.org" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-database card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Spark</h5>
+                                            <a href="https://spark.apache.org" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
                 <br>
                 <br>
