Add more links on link page

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 10-09-2023 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 12-09-2023 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -287,6 +287,44 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-magnifying-glass-chart card-img mt-3"
+                                            style="font-size: 3.5em; color: blue ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Analyze Spark</h5>
+                                            <a href="https://learn.microsoft.com/en-us/azure/synapse-analytics/get-started-analyze-spark" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-chart-simple card-img mt-3"
+                                            style="font-size: 3.5em; color: blue ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Analyze data explorer</h5>
+                                            <a href="https://learn.microsoft.com/en-us/azure/synapse-analytics/get-started-analyze-data-explorer" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-laptop-code card-img mt-3"
+                                            style="font-size: 3.5em; color: blue ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Tutorial KQL</h5>
+                                            <a href="https://learn.microsoft.com/en-us/azure/data-explorer/kusto/query/tutorials/learn-common-operators?context=%2Fazure%2Fsynapse-analytics%2Fcontext%2Fcontext&pivots=azuredataexplorer" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                
 
                             </div>
                         </div>
