--- a/views/index.ejs
+++ b/views/index.ejs
@@ -42,7 +42,7 @@
                     <div class="list-group mb-4 shadow-sm">
                         <a href="/about" class="list-group-item list-group-item-action"><i class="fa-regular fa-address-card mr-2"></i> About me</a>
                         <a href="projects" class="list-group-item list-group-item-action"><i class="fa-solid fa-list-check mr-2"></i> Projects</a>
-                        <a href="/services" class="list-group-item list-group-item-action"><i class="fa-solid fa-microchip mr-2"></i> Services</a>
+                        <!-- <a href="/services" class="list-group-item list-group-item-action"><i class="fa-solid fa-microchip mr-2"></i> Services</a> -->
                         <a href="/contact" class="list-group-item list-group-item-action"><i class="fa-regular fa-address-book mr-2"></i> Contact me</a>
                         <a href="/link" class="list-group-item list-group-item-action"><i class="fa-solid fa-link mr-2"></i> Important Links</a>
                     </div>
