--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -22,9 +22,9 @@
                     <a class="nav-link" href="/projects"><i class="fa-solid fa-list-check"></i> Project </a>
                 </li>
 
-                <li class="nav-item  <%= title === 'Services' ? 'active' : '' %>">
+                <!-- <li class="nav-item  <%= title === 'Services' ? 'active' : '' %>">
                     <a class="nav-link" href="/services"><i class="fa-solid fa-microchip"></i> Services </a>
-                </li>
+                </li> -->
 
                 <li class="nav-item  <%= title === 'Contact' ? 'active' : '' %>">
                     <a class="nav-link" href="/contact"><i class="fa-regular fa-address-book"></i> Contact </a>
